Change name to travis-test

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,6 @@ after_success:
   - pip install --user awscli # install aws cli w/o sudo
   - export PATH=$PATH:$HOME/.local/bin # put aws in the path
   - eval $(aws ecr get-login --region us-east-1) #needs AWS_ACCESS_KEY_ID and AWS_SECRET_ACCESS_KEY envvars
-  - docker build -t my_example_app .
-  - docker tag my_example_app:latest 007919870922.dkr.ecr.us-east-1.amazonaws.com/my_example_app:latest
-  - docker push 007919870922.dkr.ecr.us-east-1.amazonaws.com/my_example_app:latest
+  - docker build -t travis-test .
+  - docker tag travis-test:latest 007919870922.dkr.ecr.us-east-1.amazonaws.com/travis-test:latest
+  - docker push 007919870922.dkr.ecr.us-east-1.amazonaws.com/travis-test:latest
