--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ after_success:
   - docker --version  # document the version travis is using
   - pip install --user awscli # install aws cli w/o sudo
   - export PATH=$PATH:$HOME/.local/bin # put aws in the path
-  - eval $(aws ecr get-login --region us-east-1) #needs AWS_ACCESS_KEY_ID and AWS_SECRET_ACCESS_KEY envvars
+  - eval $(aws ecr get-login --region eu-west-1) #needs AWS_ACCESS_KEY_ID and AWS_SECRET_ACCESS_KEY envvars
   - docker build -t travis-test .
-  - docker tag travis-test:latest 007919870922.dkr.ecr.us-east-1.amazonaws.com/travis-test:latest
-  - docker push 007919870922.dkr.ecr.us-east-1.amazonaws.com/travis-test:latest
+  - docker tag travis-test:latest 007919870922.dkr.ecr.eu-west-1.amazonaws.com/travis-test:latest
+  - docker push 007919870922.dkr.ecr.eu-west-1.amazonaws.com/travis-test:latest
